--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,16 @@ body {
     }
 }
 
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    height: 40px;
+}
+
+
 #fond {
     position: sticky;
     z-index: -2;
