--- a/styles/projet.css
+++ b/styles/projet.css
@@ -2,6 +2,7 @@
     --font-size-project-name: 32px;
     --height-projet: 300px;
     --max-width-main: 1200px;
+    --max-width-project: 800px;
 }
 
 main {
@@ -21,22 +22,25 @@ main {
 .projet {    
     background-color: #fff;
     border-radius: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: space-between;
     width: 70%;
-    max-width: 800px;
+    max-width: var(--max-width-project);
     height: var(--height-projet);
     overflow: hidden;
 }
 
 
-.projet:nth-child(even) {
-    flex-direction: row-reverse;
+.projet:nth-child(even),
+#trailer .projet:nth-child(odd) {
+    flex-direction: row;
     align-self: flex-start;
 }
 
-.projet:nth-child(odd) {
+.projet:nth-child(odd),
+#trailer .projet:nth-child(even) {
+    flex-direction: row-reverse;
     align-self: flex-end;
 }
 
@@ -49,13 +53,9 @@ main {
 }
 
 .projet img {
-    align-items: center;
-
-    max-width: 60%;
+    max-width: 55%;
     min-width: 30%;
     height: 100%;
     object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    
+    border-radius: 5px;
 }
