--- a/styles/projet.css
+++ b/styles/projet.css
@@ -1,4 +1,4 @@
-:root {
+* {
     --font-size-project-name: 32px;
     --height-projet: 300px;
     --max-width-main: 1200px;
@@ -20,18 +20,20 @@ main {
 }
 
 .projet {    
+    width: 70%;
+    max-width: var(--max-width-project);
+    /* overflow: hidden; */
+
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    height: var(--height-projet);
     display: flex;
     justify-content: space-between;
-    width: 70%;
-    max-width: var(--max-width-project);
-    height: var(--height-projet);
-    overflow: hidden;
 
     transition: transform 0.3s ease-in-out;
 }
+
 
 .projet:hover {
     transform: scale(1.01) translateY(-5px);
@@ -50,14 +52,6 @@ main {
     align-self: flex-end;
 }
 
-
-.projet h3 {
-    font-size: var(--font-size-project-name);
-    font-weight: bold;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
 .projet img {
     max-width: 55%;
     min-width: 30%;
@@ -65,3 +59,54 @@ main {
     object-fit: cover;
     border-radius: 5px;
 }
+
+.projet-info {
+    margin: 1rem;
+}
+
+.projet h3 {
+    font-size: var(--font-size-project-name);
+    font-family: var(--font-titre);
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+.projet h4 {
+    font-size: calc(var(--font-size-project-name) * 0.6);
+    font-family: var(--font-titre);
+    font-weight: bold;
+    margin-top: 0;
+}
+
+.projet p {
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+
+.projet-info-cache {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    text-align: justify;
+}
+
+.projet:nth-child(even) .projet-info-cache,
+#trailer .projet:nth-child(odd) .projet-info-cache {
+    right: 0;
+    transform: translateX(110%);
+}
+
+.projet:nth-child(odd) .projet-info-cache,
+#trailer .projet:nth-child(even) .projet-info-cache {
+    left: 0;
+    transform: translateX(-110%);
+}
+
+
+.projet:hover .projet-info-cache {
+    display: block;
+}
+
+
