--- a/styles/menu.css
+++ b/styles/menu.css
@@ -61,10 +61,15 @@ header {
     top: 0;
     margin: 0;
     z-index: 10;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url("/images/FORTICHE_Banniere-1.jpg");
+    background-position: center;
+    background-size: cover; 
+    width:100%;
 }
 
 #menu {
-    background: linear-gradient(to right, #154c73, #0D324D);
+    /* background: linear-gradient(to right, #154c73, #0D324D); */
+    
     padding: 0.3rem 5rem;
     margin: 0;
     display: flex;
