--- a/styles/menu.css
+++ b/styles/menu.css
@@ -61,7 +61,7 @@ header {
     top: 0;
     margin: 0;
     z-index: 10;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url("/images/FORTICHE_Banniere-1.jpg");
+    background-image: url("/images/FORTICHE_Banniere-1.jpg");
     background-position: center;
     background-size: cover; 
     width:100%;
