--- a/styles/menu.css
+++ b/styles/menu.css
@@ -19,8 +19,29 @@ body {
     margin: 0;
     padding: 0;
     font-family: var(--font-paragraphe); 
+    color: var(--couleur-noir);
     line-height: 1.5;
     min-height: 100vh;
+}
+
+h1 {
+    font-size: var(--font-size-h1);
+    font-family: var(--font-titre);
+}
+
+h2 {
+    font-size: var(--font-size-h2);
+    font-family: var(--font-titre);
+}
+
+h3 {    
+    font-size: var(--font-size-h3);
+    font-family: var(--font-titre);
+}
+
+h4 {
+    font-size: var(--font-size-h4);
+    font-family: var(--font-titre);
 }
 
 main {
@@ -64,7 +85,6 @@ header {
     background-image: url("../images/FORTICHE_Banniere-1.jpg");
     background-position: center;
     background-size: cover; 
-    width:100%;
 }
 
 #menu {
