--- a/styles/menu.css
+++ b/styles/menu.css
@@ -111,11 +111,16 @@ header {
 
 .nav-links {
     display: flex;
-    gap: 5rem;
+    gap:4rem;
 }
 
 .nav-links a {
-    color: white;
+    color: #FFF;
+    text-shadow: 3px 3px 3px var(--couleur-bleu);
+    
+    padding: 5px 10px;
+    font-weight: bold;
+    
     text-decoration: none;
     transition: color 0.2s ease;
     font-size: larger;
@@ -150,5 +155,5 @@ footer {
     display: flex;
     width: 100%;
     height: 60px;
-    background-color: #4c1d95;
+    background-color: var(--couleur-violet);
 }
