ajout de contenu

--- a/styles/histoire.css
+++ b/styles/histoire.css
@@ -1,48 +1,149 @@
-h1{
-   font-size:26px;
-   font-style:italic;
-   margin-left: 50%;
-   color: rgb(2, 33, 61);
-   text-decoration: black;
+*{
+   margin: 0;
+   padding:0;
+}
+.header{  /*  image de fond */
+   min-height: 100vh;
+   width:100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/FORTICHE_Banniere-1.jpg); 
+   background-position: center;
+   background-size: cover;
+   position: relative;
+}
+
+nav{
+       display: flex;
+       padding: 2% 6%;
+       justify-content: space-between;
+       align-items: center;
+   }
+   
+nav img{
+       width: 150px;
+   }
+
+   .nav-links{
+
+       flex:1;
+       text-align: right;
+   }
+   .nav-links ul li{
+       list-style: none;
+       display: inline-block;
+       padding: 8px 12px;
+       position: relative;
+   }
+   .nav-links ul li a{
+       color: #fff;
+       text-decoration: none;
+       font-size: 13;
+   }
+   
+   .nav-links ul li ::after{
+   
+       content: '';
+       width: 0%;
+       height: 4px;
+       background:#ada6cb ;
+       display: block;
+       margin: auto;
+       transition: 0.5s ;
+   }
+   .nav-links ul li :hover::after{
+       width: 100%;
+   }
+
+   .text-box{
+       width: 99%;
+       color: #fff;
+       position: absolute;
+       top: 50%;
+       left:50%;
+       transform: translate(-50%,-50%); 
+       text-align: center;
+   
+   }
+   
+   .text-box h1{
+       font-size: 100px;
+       font-style: oblique;
+   }
+
+   /* FOOTER */
+.footer{
+   width:100%;
    text-align: center;
-   float: center ;
-
-
+   padding: 30px 0;
+   background-color: black;
 }
 
-#photo{
-   background-origin: padding-box;
-   border: 20px solid rgb(1, 1, 60);
-   float: left;
+.footer p{
+   color: #fff;
 }
 
-#photo2{
-   background-origin: padding-box;
-   border: 20px solid rgb(1, 1, 60);
-   float: right;
-   margin-left: 40%;
+
+.sub-header{
+   height: 30vh;
+   width:100%;
+   background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/FORTICHE_Banniere-1.jpg);
+   background-position: center;
+   background-size: cover;
+   text-align: center;
+   color: #fff;
 }
 
-#first {
-   float: left;
-   font-size: 30px;
-   font-style:italic;
-   width: 50%;
-   top: 20 px;
-   right: 10 px;
 
-}
+   .row{
+       margin-top: 5%;
+       display: flex;
+       justify-content: space-between;
+   }
+   
+   .histoire{
+       width: 80%;
+       margin: auto;
+       padding-top: 80px;
+       padding-bottom: 50px;
+   }
+   
+   .histoire-col{
+       flex-basis: 48%;
+       padding: 30px 2px;
+   }
+   
+   .histoire-col img {
+       width:  100%;
+   }
+   .histoire-col h1{
+   padding-top: 0;
+   }
+   .histoire-col p{
+   padding: 15px 0 25px;
+   }
 
-.too {
-   display:flex;
-}
 
-.too2 {
-   display:flex;
-   float: right;
-}
-body {
-
-   background-color: rgb(142, 206, 206);
-}
-
+   .im {
+       display: flex; 
+       flex-direction: row; 
+       align-items: center; 
+       gap: 20px; 
+   }
+   
+   .im img {
+       width: 48%; 
+   }
+   
+   .im .text {
+       flex-grow: 1; 
+   }
+   
+   .im h1 {
+       padding-top: 0;
+   }
+   
+   .im p {
+       padding: 15px 0 25px;
+   }
+   
+   
+   
