--- a/styles/histoire.css
+++ b/styles/histoire.css
@@ -1,5 +1,55 @@
-.row{
-    margin-top: 5%;
-    display: flex;
-   
+h1{
+text-align: center;
+
 }
+
+
+
+figcaption {
+  
+   padding: 2px;
+   text-align: center;
+ }
+
+.container {
+   display: flex;
+   align-items: center;
+   gap: 2rem;
+   /* overflow: hidden; */
+
+   background-color: #fff;
+   border-radius: 15px;
+   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+   height: var(--height-projet);
+   justify-content: space-between;
+   background-color: #ece7ee;
+   transition: transform 0.3s ease-in-out;
+   margin: 4rem;
+}
+
+
+.container:hover {
+   transform: scale(1.01) translateY(-5px);
+}
+
+
+.container:nth-child(even){
+   flex-direction: row;
+}
+
+.container:nth-child(odd) {
+   flex-direction: row-reverse;
+}
+
+.container img {
+   width: 40%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 15px;
+}
+
+.container div {
+   margin: 1rem;
+   width: 50%;
+}
+
