--- a/styles/projet.css
+++ b/styles/projet.css
@@ -52,7 +52,12 @@
 }
 
 .projet-info {
-    margin: 1rem;
+    margin: 3rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .projet h3 {
