--- a/styles/Finance.css
+++ b/styles/Finance.css
@@ -27,7 +27,7 @@
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    background-color: #000000;
+    background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
