--- a/styles/menu.css
+++ b/styles/menu.css
@@ -71,11 +71,11 @@ main {
     top: 0;
     z-index: -2;
     width: 100%;
+    height: 80vh;
 }
 
 #image_fond img {
     width: 100%;
-    max-height: 70vh;
     object-fit: cover;
 }
 
@@ -84,10 +84,13 @@ header {
     top: 0;
     margin: 0;
     z-index: 10;
-    background-image: url("../images/FORTICHE_Banniere-1.jpg");
+    background-image: url('../images/FORTICHE_Banniere-1.jpg');
+    /* background-color: var(--couleur-violet); */
     background-position: center;
     background-size: cover; 
 }
+
+
 
 
 #menu {
