--- a/styles/Accueil.css
+++ b/styles/Accueil.css
@@ -1,6 +1,7 @@
 header {
     background-color: var(--couleur-violet);
     background-image: none;
+    transform: scale(1.01);
 }
 
 .content {
@@ -53,7 +54,7 @@ section {
     text-align: justify;
 
     width: 100%;
-    height: 500px;
+    height: 450px;
 
     padding: 2rem;
     border-radius: 5px;
@@ -62,7 +63,7 @@ section {
 
 #pages .container_page img {
     width: 100%;
-    height: 300px;
+    height: 150px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -73,6 +74,12 @@ section {
     color: var(--couleur-noir);
     background-color: var(--couleur-beige);
     border-radius: 15px;
+    
+    transition: transform 0.3s ease-in-out;
+}
+
+.lien_page:hover {
+    transform: rotate(3deg) scale(1.05);
 }
 
 #footer {
