--- a/styles/Finance.css
+++ b/styles/Finance.css
@@ -2,10 +2,15 @@
 
 .intro{
     margin: 0 15% 75px 15%;
-    padding: 0 15px 15px 15px;
+    padding: 15px 15px 15px 15px;
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.intro h2{
+    margin: 0 0 15px 0;
+    padding: 0;
 }
 
 .tab{
