--- a/styles/Accueil.css
+++ b/styles/Accueil.css
@@ -1,7 +1,7 @@
 header {
     background-color: var(--couleur-violet);
     background-image: none;
-    transform: scale(1.01);
+    transform: scaleY(1.01);
 }
 
 .content {
